fix: gap under blog
Issue #23

--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -113,7 +113,6 @@ nav {
   ". about ."
   ". contact .";
   padding-bottom: 2%;
-  height: 100%;
 }
 
 .error-container {
